Fix some layout bugs with the unbranded design

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -16,12 +16,7 @@
 
 	.govuk-main-wrapper {
 		background-color: govuk-functional-colour('body-background');
-		padding: 40px 60px;
-		margin: 40px;
-	}
-
-	.govuk-width-container {
-		max-width: 1130px;
+		padding: 30px 30px 0;
 	}
 }
 
